--- a/kwetter-ios/kwetter-ios/Base.lproj/Main.storyboard
+++ b/kwetter-ios/kwetter-ios/Base.lproj/Main.storyboard
@@ -49,7 +49,7 @@
         <scene sceneID="czc-5f-a6T">
             <objects>
                 <tableViewController title="Timeline" id="xwK-9v-akV" customClass="TimelineController" customModule="kwetter_ios" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="144" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="FS0-Ty-SDi">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="FS0-Ty-SDi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -69,13 +69,13 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marvin Zwolsman" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rN2-nv-U5G">
-                                            <rect key="frame" x="79" y="8" width="135" height="21"/>
+                                            <rect key="frame" x="80" y="8" width="135" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@murf" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="akY-GE-Rx3">
-                                            <rect key="frame" x="218" y="12.5" width="38" height="14.5"/>
+                                            <rect key="frame" x="219" y="12.5" width="38" height="14.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" red="0.68323034048080444" green="0.70962250232696533" blue="0.7278817892074585" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -87,20 +87,24 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentInsetAdjustmentBehavior="never" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V06-tR-TDY">
-                                            <rect key="frame" x="79" y="29" width="280" height="106.5"/>
+                                            <rect key="frame" x="80" y="29" width="279" height="106.5"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                            <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            <connections>
+                                                <outlet property="delegate" destination="xwK-9v-akV" id="BV0-wl-hqV"/>
+                                            </connections>
                                         </textView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="V06-tR-TDY" secondAttribute="bottom" constant="8" id="8sg-iy-CQp"/>
                                         <constraint firstItem="i4M-0P-Fus" firstAttribute="top" secondItem="I3U-a1-ZSb" secondAttribute="top" constant="8" id="9VQ-QF-9DZ"/>
-                                        <constraint firstItem="rN2-nv-U5G" firstAttribute="leading" secondItem="i4M-0P-Fus" secondAttribute="trailing" constant="7" id="BZf-H8-Qld"/>
+                                        <constraint firstItem="rN2-nv-U5G" firstAttribute="leading" secondItem="i4M-0P-Fus" secondAttribute="trailing" constant="8" id="BZf-H8-Qld"/>
                                         <constraint firstAttribute="trailing" secondItem="V06-tR-TDY" secondAttribute="trailing" constant="16" id="EvN-TN-d5y"/>
                                         <constraint firstItem="rR6-9I-Cqp" firstAttribute="baseline" secondItem="akY-GE-Rx3" secondAttribute="baseline" id="IBT-vB-iQh"/>
                                         <constraint firstItem="V06-tR-TDY" firstAttribute="leading" secondItem="rN2-nv-U5G" secondAttribute="leading" id="PwT-uu-8BG"/>
+                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="i4M-0P-Fus" secondAttribute="bottom" constant="8" id="RgG-Mv-dKG"/>
                                         <constraint firstAttribute="trailing" secondItem="rR6-9I-Cqp" secondAttribute="trailing" constant="16" id="ZrQ-PN-aIy"/>
                                         <constraint firstItem="V06-tR-TDY" firstAttribute="top" secondItem="rN2-nv-U5G" secondAttribute="bottom" id="akC-Vp-P3x"/>
                                         <constraint firstItem="rN2-nv-U5G" firstAttribute="top" secondItem="i4M-0P-Fus" secondAttribute="top" id="rYb-3j-8ic"/>
@@ -109,6 +113,7 @@
                                         <constraint firstItem="akY-GE-Rx3" firstAttribute="baseline" secondItem="rN2-nv-U5G" secondAttribute="baseline" id="zXC-MA-GTH"/>
                                     </constraints>
                                 </tableViewCellContentView>
+                                <inset key="separatorInset" minX="80" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="content" destination="V06-tR-TDY" id="fHw-Hd-CKz"/>
                                     <outlet property="fullName" destination="rN2-nv-U5G" id="7cx-rA-7TW"/>
