Load data for profile view and bind it

--- a/kwetter-ios/kwetter-ios/Base.lproj/Main.storyboard
+++ b/kwetter-ios/kwetter-ios/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,7 +13,7 @@
         <!--tester-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="ProfileViewController" customModule="kwetter_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +21,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nSU-nL-Phn">
                                 <rect key="frame" x="16" y="80" width="79" height="79"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="nSU-nL-Phn" secondAttribute="height" multiplier="1:1" id="Td6-nA-XTv"/>
+                                    <constraint firstAttribute="height" constant="79" id="e9x-YG-Uiv"/>
+                                    <constraint firstAttribute="width" constant="79" id="lhM-1b-M5n"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LZG-w7-g6o">
@@ -133,6 +133,13 @@
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <navigationItem key="navigationItem" title="tester" id="1aF-GU-Xkc"/>
+                    <connections>
+                        <outlet property="followerCountLabel" destination="4vS-Ly-iir" id="GeY-fz-r1c"/>
+                        <outlet property="followingCountLabel" destination="zfc-mT-bVh" id="rtG-ga-z6r"/>
+                        <outlet property="kweetCountLabel" destination="BQ6-sR-FTy" id="aLP-yu-qEg"/>
+                        <outlet property="profileImage" destination="nSU-nL-Phn" id="crC-3Z-u8t"/>
+                        <outlet property="tableView" destination="5BU-Su-epH" id="PQU-eF-TVr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
@@ -196,7 +203,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YUd-Rd-tSL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2915" y="-432"/>
+            <point key="canvasLocation" x="2913" y="-440"/>
         </scene>
         <!--Create Kweet-->
         <scene sceneID="hL6-dU-NYD">
@@ -236,7 +243,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sqn-W4-ZNl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3889" y="-432"/>
+            <point key="canvasLocation" x="3889" y="-440"/>
         </scene>
         <!--Timeline-->
         <scene sceneID="BXQ-Vk-DNW">
